# Habits_tracker_SPA

./: .dockerignore  .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
telegram_reminder/: apps.py  models.py  services.py  tasks.py  tests.py  urls.py
telegram_reminder/migrations/: 0001_initial.py  0002_remove_telegramreminder_award_message_and_more.py
users/: managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
